--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -55,7 +55,9 @@ jobs:
         env:
           TF_VAR_region: "us-east-1"
           TF_VAR_release_title: "PR Build"
-        run: terraform apply -no-color -input=false
+        run: |
+          terraform workspace show
+          terraform apply -no-color -input=false
         continue-on-error: true
 
       - name: Update Pull Request
