--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -56,6 +56,7 @@ jobs:
           TF_VAR_region: "us-east-1"
           TF_VAR_release_title: "PR Build"
         run: |
+          terraform workspace list
           terraform workspace select ClashBotWorkflow
           terraform workspace show
           terraform apply -no-color -auto-approve -input=false
