--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -42,172 +42,205 @@ jobs:
       - name: Test
         run: npm test
 
-  # terraformPreReqs:
-  #   name: 'Terraform Plan Prereqs'
-  #   runs-on: ubuntu-latest
-  #   defaults:
-  #     run:
-  #       working-directory: ./terraform/prereqs
-  #   permissions:
-  #     id-token: write
-  #     contents: read
-  #     pull-requests: write
+  eventHandler:
+    name: Event Handler Lambda
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./functions/clash-bot/event-handler
+    
+    steps:
+      - uses: FranzDiebold/github-env-vars-action@v2.1.0
 
-  #   steps:
-  #     - uses: FranzDiebold/github-env-vars-action@v2.1.0
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+      
+      - name: Checkout
+        uses: actions/checkout@v2
 
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
+      - name: Build shared archive
+        working-directory: ./functions/clash-bot/shared
+        run: |
+          npm install
+          npx tsc
+          npm pack
+      
+      - name: Install dependencies and link
+        run: |
+          npm install
+          npx link ../shared
 
-  #     - name: Setup Terraform
-  #       uses: hashicorp/setup-terraform@v1
-  #       with:
-  #         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+      - name: Test
+        run: npm test
 
-  #     - name: Terraform Format
-  #       id: fmt
-  #       run: terraform fmt -check
+  terraformPreReqs:
+    name: 'Terraform Plan Prereqs'
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./terraform/prereqs
+    permissions:
+      id-token: write
+      contents: read
+      pull-requests: write
 
-  #     - name: Terraform Init
-  #       id: init
-  #       run: terraform init
+    steps:
+      - uses: FranzDiebold/github-env-vars-action@v2.1.0
 
-  #     - name: Terraform Validate
-  #       id: validate
-  #       run: terraform validate -no-color
+      - name: Checkout
+        uses: actions/checkout@v3
 
-  #     - name: Configure AWS Credentials
-  #       uses: aws-actions/configure-aws-credentials@v3
-  #       with:
-  #         role-to-assume: arn:aws:iam::816923827429:role/ClashBotGitHubUser
-  #         aws-region: us-east-1
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-  #     - name: Terraform Plan
-  #       id: plan
-  #       if: github.event_name == 'pull_request'
-  #       env:
-  #         TF_VAR_region: "us-east-1"
-  #         TF_VAR_environment: "dev"
-  #       run: |
-  #         terraform workspace show
-  #         terraform plan -no-color -auto-approve -input=false
-  #       continue-on-error: true
+      - name: Terraform Format
+        id: fmt
+        run: terraform fmt -check
 
-  #     - name: Update Pull Request
-  #       uses: actions/github-script@v6.1.0
-  #       if: github.event_name == 'pull_request'
-  #       env:
-  #         PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
-  #       with:
-  #         github-token: ${{ secrets.GITHUB_TOKEN }}
-  #         script: |
-  #           const output = `Clash Bot Workflow Prerequisites - plan
-  #           #### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
-  #           #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
-  #           #### Terraform Prerequisite Plan 📖\`${{ steps.plan.outcome }}\`
-  #           #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
+      - name: Terraform Init
+        id: init
+        run: terraform init
 
-  #           <details><summary>Show Plan</summary>
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
 
-  #           #### Prerequisites
-  #           \`\`\`\n
-  #           ${process.env.PLAN}
-  #           \`\`\`
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: arn:aws:iam::816923827429:role/ClashBotGitHubUser
+          aws-region: us-east-1
 
-  #           </details>
+      - name: Terraform Plan
+        id: plan
+        if: github.event_name == 'pull_request'
+        env:
+          TF_VAR_region: "us-east-1"
+          TF_VAR_environment: "dev"
+        run: |
+          terraform workspace show
+          terraform plan -no-color -auto-approve -input=false
+        continue-on-error: true
 
-  #           *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+      - name: Update Pull Request
+        uses: actions/github-script@v6.1.0
+        if: github.event_name == 'pull_request'
+        env:
+          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const output = `Clash Bot Workflow Prerequisites - plan
+            #### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+            #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+            #### Terraform Prerequisite Plan 📖\`${{ steps.plan.outcome }}\`
+            #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
 
-  #           github.rest.issues.createComment({
-  #             issue_number: context.issue.number,
-  #             owner: context.repo.owner,
-  #             repo: context.repo.repo,
-  #             body: output
-  #           })
+            <details><summary>Show Plan</summary>
 
-  # terraformWorkflow:
-  #   name: 'Terraform Plan Workflow'
-  #   runs-on: ubuntu-latest
-  #   defaults:
-  #     run:
-  #       working-directory: ./terraform/workflow
-  #   permissions:
-  #     id-token: write
-  #     contents: read
-  #     pull-requests: write
+            #### Prerequisites
+            \`\`\`\n
+            ${process.env.PLAN}
+            \`\`\`
 
-  #   steps:
-  #     - uses: FranzDiebold/github-env-vars-action@v2.1.0
+            </details>
 
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
+            *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
 
-  #     - name: Setup Terraform
-  #       uses: hashicorp/setup-terraform@v1
-  #       with:
-  #         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
 
-  #     - name: Terraform Format
-  #       id: fmt
-  #       run: terraform fmt -check
+  terraformWorkflow:
+    name: 'Terraform Plan Workflow'
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./terraform/workflow
+    permissions:
+      id-token: write
+      contents: read
+      pull-requests: write
 
-  #     - name: Terraform Init
-  #       id: init
-  #       run: terraform init
+    steps:
+      - uses: FranzDiebold/github-env-vars-action@v2.1.0
 
-  #     - name: Terraform Validate
-  #       id: validate
-  #       run: terraform validate -no-color
+      - name: Checkout
+        uses: actions/checkout@v3
 
-  #     - name: Configure AWS Credentials
-  #       uses: aws-actions/configure-aws-credentials@v3
-  #       with:
-  #         role-to-assume: arn:aws:iam::816923827429:role/ClashBotGitHubUser
-  #         aws-region: us-east-1
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-  #     - name: Terraform Plan
-  #       id: plan
-  #       if: github.event_name == 'pull_request'
-  #       env:
-  #         TF_VAR_region: "us-east-1"
-  #         TF_VAR_environment: "dev"
-  #         TF_VAR_s3_bucket_name: "sample-bucket"
-  #         TF_VAR_event_publisher_artifact_name: "sample-artifact"
-  #         TF_VAR_event_handler_artifact_name: "sample-artifact"
-  #         TF_VAR_sqs_batch_size: "1"
-  #       run: |
-  #         terraform workspace show
-  #         terraform plan -no-color -auto-approve -input=false
-  #       continue-on-error: true
+      - name: Terraform Format
+        id: fmt
+        run: terraform fmt -check
 
-  #     - name: Update Pull Request
-  #       uses: actions/github-script@v6.1.0
-  #       if: github.event_name == 'pull_request'
-  #       env:
-  #         PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
-  #       with:
-  #         github-token: ${{ secrets.GITHUB_TOKEN }}
-  #         script: |
-  #           const output = `Clash Bot Workflow - plan
-  #           #### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
-  #           #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
-  #           #### Terraform Workflow Plan 📖\`${{ steps.plan.outcome }}\`
-  #           #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
+      - name: Terraform Init
+        id: init
+        run: terraform init
 
-  #           <details><summary>Show Plan</summary>
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
 
-  #           #### Prerequisites
-  #           \`\`\`\n
-  #           ${process.env.PLAN}
-  #           \`\`\`
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: arn:aws:iam::816923827429:role/ClashBotGitHubUser
+          aws-region: us-east-1
 
-  #           </details>
+      - name: Terraform Plan
+        id: plan
+        if: github.event_name == 'pull_request'
+        env:
+          TF_VAR_region: "us-east-1"
+          TF_VAR_environment: "dev"
+          TF_VAR_s3_bucket_name: "sample-bucket"
+          TF_VAR_event_publisher_artifact_name: "sample-artifact"
+          TF_VAR_event_handler_artifact_name: "sample-artifact"
+          TF_VAR_sqs_batch_size: "1"
+        run: |
+          terraform workspace show
+          terraform plan -no-color -auto-approve -input=false
+        continue-on-error: true
 
-  #           *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+      - name: Update Pull Request
+        uses: actions/github-script@v6.1.0
+        if: github.event_name == 'pull_request'
+        env:
+          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const output = `Clash Bot Workflow - plan
+            #### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+            #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+            #### Terraform Workflow Plan 📖\`${{ steps.plan.outcome }}\`
+            #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
 
-  #           github.rest.issues.createComment({
-  #             issue_number: context.issue.number,
-  #             owner: context.repo.owner,
-  #             repo: context.repo.repo,
-  #             body: output
-  #           })
+            <details><summary>Show Plan</summary>
+
+            #### Prerequisites
+            \`\`\`\n
+            ${process.env.PLAN}
+            \`\`\`
+
+            </details>
+
+            *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
