Adding in get caller identity to debug

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -107,6 +107,10 @@ jobs:
           role-to-assume: arn:aws:iam::816923827429:role/ClashBotGitHubUser
           aws-region: us-east-1
 
+      - name: get caller identity
+        run: |
+          aws sts get-caller-identity
+
       - name: Terraform Init
         id: init
         run: terraform init
@@ -198,6 +202,7 @@ jobs:
       - name: Terraform Validate
         id: validate
         run: terraform validate -no-color
+
       - name: Terraform Plan
         id: plan
         if: github.event_name == 'pull_request'
