--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -124,8 +124,9 @@ jobs:
         id: plan
         if: github.event_name == 'pull_request'
         env:
-          TF_VAR_region: "us-east-1"
-          TF_VAR_environment: "dev"
+          TF_VAR_region: us-east-1
+          TF_VAR_environment: dev
+          TF_LOG: DEBUG
         run: |
           terraform workspace show
           terraform plan -no-color -input=false
