--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -126,8 +126,8 @@ jobs:
         env:
           TF_VAR_region: us-east-1
           TF_VAR_environment: dev
-          TF_VAR_access_key: ${{ env.AWS_ACCESS_KEY_ID }}
-          TF_VAR_secret_key: ${{ env.AWS_SECRET_ACCESS_KEY }}
+          TF_VAR_access: ${{ env.AWS_ACCESS_KEY_ID }}
+          TF_VAR_secret: ${{ env.AWS_SECRET_ACCESS_KEY }}
         run: |
           terraform workspace show
           terraform plan -no-color -input=false
