--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -75,95 +75,93 @@ jobs:
       - name: Test
         run: npm test
 
-  terraformPreReqs:
-    name: 'Terraform Plan Prereqs'
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./terraform/prereqs
-    permissions:
-      id-token: write
-      contents: read
-      pull-requests: write
+  # terraformPreReqs:
+  #   name: 'Terraform Plan Prereqs'
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       working-directory: ./terraform/prereqs
+  #   permissions:
+  #     id-token: write
+  #     contents: read
+  #     pull-requests: write
 
-    steps:
-      - uses: FranzDiebold/github-env-vars-action@v2.1.0
+  #   steps:
+  #     - uses: FranzDiebold/github-env-vars-action@v2.1.0
 
-      - name: Checkout
-        uses: actions/checkout@v3
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+  #     - name: Setup Terraform
+  #       uses: hashicorp/setup-terraform@v1
+  #       with:
+  #         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-      - name: Terraform Format
-        id: fmt
-        run: terraform fmt -check
+  #     - name: Terraform Format
+  #       id: fmt
+  #       run: terraform fmt -check
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v3
-        with:
-          role-to-assume: arn:aws:iam::816923827429:role/ClashBotGitHubUser
-          aws-region: us-east-1
+  #     - name: Configure AWS Credentials
+  #       uses: aws-actions/configure-aws-credentials@v3
+  #       with:
+  #         role-to-assume: arn:aws:iam::816923827429:role/ClashBotGitHubUser
+  #         aws-region: us-east-1
 
-      - name: get caller identity
-        run: |
-          aws sts get-caller-identity
-          aws configure list
+  #     - name: get caller identity
+  #       run: |
+  #         aws sts get-caller-identity
+  #         aws configure list
 
-      - name: Terraform Init
-        id: init
-        run: terraform init
+  #     - name: Terraform Init
+  #       id: init
+  #       run: terraform init
 
-      - name: Terraform Validate
-        id: validate
-        run: terraform validate -no-color
+  #     - name: Terraform Validate
+  #       id: validate
+  #       run: terraform validate -no-color
 
-      - name: Terraform Plan
-        id: plan
-        if: github.event_name == 'pull_request'
-        env:
-          TF_VAR_region: us-east-1
-          TF_VAR_environment: dev
-          TF_VAR_access: ${{ env.AWS_ACCESS_KEY_ID }}
-          TF_VAR_secret: ${{ env.AWS_SECRET_ACCESS_KEY }}
-        run: |
-          terraform workspace show
-          terraform plan -no-color -input=false
-        continue-on-error: true
+  #     - name: Terraform Plan
+  #       id: plan
+  #       if: github.event_name == 'pull_request'
+  #       env:
+  #         TF_VAR_region: us-east-1
+  #         TF_VAR_environment: dev
+  #       run: |
+  #         terraform workspace show
+  #         terraform plan -no-color -input=false
+  #       continue-on-error: true
 
-      - name: Update Pull Request
-        uses: actions/github-script@v6.1.0
-        if: github.event_name == 'pull_request'
-        env:
-          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const output = `Clash Bot Workflow Prerequisites - plan
-            #### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
-            #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
-            #### Terraform Prerequisite Plan 📖\`${{ steps.plan.outcome }}\`
-            #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
+  #     - name: Update Pull Request
+  #       uses: actions/github-script@v6.1.0
+  #       if: github.event_name == 'pull_request'
+  #       env:
+  #         PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+  #       with:
+  #         github-token: ${{ secrets.GITHUB_TOKEN }}
+  #         script: |
+  #           const output = `Clash Bot Workflow Prerequisites - plan
+  #           #### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+  #           #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+  #           #### Terraform Prerequisite Plan 📖\`${{ steps.plan.outcome }}\`
+  #           #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
 
-            <details><summary>Show Plan</summary>
+  #           <details><summary>Show Plan</summary>
 
-            #### Prerequisites
-            \`\`\`\n
-            ${process.env.PLAN}
-            \`\`\`
+  #           #### Prerequisites
+  #           \`\`\`\n
+  #           ${process.env.PLAN}
+  #           \`\`\`
 
-            </details>
+  #           </details>
 
-            *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+  #           *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
 
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: output
-            })
+  #           github.rest.issues.createComment({
+  #             issue_number: context.issue.number,
+  #             owner: context.repo.owner,
+  #             repo: context.repo.repo,
+  #             body: output
+  #           })
 
   terraformWorkflow:
     name: 'Terraform Plan Workflow'
