--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -169,7 +169,7 @@ jobs:
     defaults:
       run:
         working-directory: ./terraform/workflow
-    needs: terraformPreReqs
+    # needs: terraformPreReqs
     permissions:
       id-token: write
       contents: read
