--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -111,6 +111,7 @@ jobs:
         run: |
           aws sts get-caller-identity
           aws configure list
+          aws s3 ls
 
       - name: Terraform Init
         id: init
