--- a/functions/clash-bot/event-publisher/package.json
+++ b/functions/clash-bot/event-publisher/package.json
@@ -29,6 +29,6 @@
     "@aws-sdk/client-sqs": "^3.405.0",
     "dotenv": "^16.3.1",
     "pino": "^8.15.0",
-    "shared": "github:Poss111/ClashBotWorkflow#addInfra:/functions/clash-bot/shared"
+    "clash-bot-shared": "github:Poss111/ClashBotWorkflowShared#main"
   }
 }
