Adding in steps to package lambda artifacts

--- a/functions/clash-bot/event-handler/package.json
+++ b/functions/clash-bot/event-handler/package.json
@@ -4,7 +4,8 @@
   "description": "A clash bot function",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc"
   },
   "keywords": [
     "clash-bot",
