--- a/functions/clash-bot/event-publisher/package.json
+++ b/functions/clash-bot/event-publisher/package.json
@@ -4,7 +4,8 @@
   "description": "A typescript/nodejs project for interacting with Clash Bot Teams.",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc"
   },
   "keywords": [
     "clash-bot"
