--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -33,8 +33,11 @@ jobs:
       - name: Test
         run: npm test
 
+      - name: Build
+        run: npm run build
+
       - name: Archive
-        run: tar -czvf event-publisher-${{ github.run_number }}.tar.gz ./prod
+        run: tar -czvf event-publisher-${{ github.run_number }}.tar.gz ./prod ./node_modules ./package.json
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
@@ -66,8 +69,11 @@ jobs:
       - name: Test
         run: npm test
 
+      - name: Build
+        run: npm run build
+
       - name: Archive
-        run: tar -czvf event-handler-${{ github.run_number }}.tar.gz ./prod
+        run: tar -czvf event-handler-${{ github.run_number }}.tar.gz ./prod ./node_modules ./package.json
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
