Updating tf var to be path to artifact instead of just artifact key

--- a/.github/workflows/dev-release.yml
+++ b/.github/workflows/dev-release.yml
@@ -38,18 +38,10 @@ jobs:
           with:
             cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
   
-        - name: Terraform Format
-          id: fmt
-          run: terraform fmt -check
-  
         - name: Terraform Init
           id: init
           run: terraform init
-  
-        - name: Terraform Validate
-          id: validate
-          run: terraform validate -no-color
-  
+    
         - name: Terraform Apply
           id: apply
           env:
@@ -81,8 +73,26 @@ jobs:
               run: |
                 npm install
 
-            - name: Test
-              run: npm test
+            - name: Build
+              run: npm run build
+  
+            - name: Configure AWS Credentials
+              uses: aws-actions/configure-aws-credentials@v3
+              with:
+                role-to-assume: arn:aws:iam::816923827429:role/ClashBotGitHubUser
+                aws-region: us-east-1
+    
+            - name: Archive and Publish
+              run: |
+                tar -czf ./event-publisher-${{ github.run_number }}.tar.gz ./prod ./node_modules ./package.json
+                aws s3 cp ./event-publisher-${{ github.run_number }}.tar.gz s3://${{ env.S3_BUCKET_NAME }}/artifacts/${{ github.run_number }}/event-publisher-${{ github.run_number }}.tar.gz
+      
+            - name: Upload Artifacts
+              uses: actions/upload-artifact@v2
+              with:
+                name: event-handler-${{ github.run_number }}
+                path: ./functions/clash-bot/event-publisher/event-publisher-${{ github.run_number }}.tar.gz
+                if-no-files-found: error
 
     eventHandler:
         name: Build and Deploy Event Handler Lambda
@@ -106,4 +116,70 @@ jobs:
         - name: Install dependencies and link
           run: |
             npm install
-            npx link ../shared
+
+        - name: Build
+          run: npm run build
+  
+        - name: Configure AWS Credentials
+          uses: aws-actions/configure-aws-credentials@v3
+          with:
+            role-to-assume: arn:aws:iam::816923827429:role/ClashBotGitHubUser
+            aws-region: us-east-1
+
+        - name: Archive and Publish
+          run: |
+            tar -czf ./event-handler-${{ github.run_number }}.tar.gz ./prod ./node_modules ./package.json
+            aws s3 cp ./event-handler-${{ github.run_number }}.tar.gz s3://${{ env.S3_BUCKET_NAME }}/artifacts/${{ github.run_number }}/event-handler-${{ github.run_number }}.tar.gz
+  
+        - name: Upload Artifacts
+          uses: actions/upload-artifact@v2
+          with:
+            name: event-handler-${{ github.run_number }}
+            path: ./functions/clash-bot/event-handler/event-handler-${{ github.run_number }}.tar.gz
+            if-no-files-found: error
+
+    terraformWorkflow:
+      name: Terraform Workflow Apply
+      runs-on: ubuntu-latest
+      defaults:
+        run:
+          working-directory: ./terraform/workflow
+      needs: 
+        - terraformPreReqs
+        - eventPublisher
+        - eventHandler
+      permissions:
+        id-token: write
+        contents: read
+  
+      steps:
+        - uses: FranzDiebold/github-env-vars-action@v2.1.0
+  
+        - name: Checkout
+          uses: actions/checkout@v3
+  
+        - name: Configure AWS Credentials
+          uses: aws-actions/configure-aws-credentials@v3
+          with:
+            role-to-assume: arn:aws:iam::816923827429:role/ClashBotGitHubUser
+            aws-region: us-east-1
+  
+        - name: Setup Terraform
+          uses: hashicorp/setup-terraform@v1
+          with:
+            cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+  
+        - name: Terraform Init
+          id: init
+          run: terraform init
+  
+        - name: Terraform Apply
+          id: apply
+          env:
+            TF_VAR_region: us-east-1
+            TF_VAR_environment: ${{ env.ENVIRONMENT }}
+            TF_VAR_s3_bucket_name: ${{ env.S3_BUCKET_NAME }}
+            TF_VAR_event_publisher_artifact_path: artifacts/${{ github.run_number }}/event-publisher-${{ github.run_number }}.tar.gz
+            TF_VAR_event_handler_artifact_path: artifacts/${{ github.run_number }}/event-handler-${{ github.run_number }}.tar.gz
+            TF_VAR_sqs_batch_size: "1"
+          run: terraform apply -no-color -input=false --auto-approve
