--- a/.github/workflows/dev-release.yml
+++ b/.github/workflows/dev-release.yml
@@ -3,7 +3,7 @@ name: Build and Deploy into Development
 on:
     push:
         branches:
-            - master
+            - main
         paths-ignore:
             - '**/README.md'
             - '**/.gitignore'
